@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.4 2015/11/04 01:32:26 agc Exp $
+$NetBSD: distinfo,v 1.5 2019/02/02 18:10:24 scole Exp $
 
-SHA1 (pflogsumm-1.1.0.tar.gz) = 8e4efaf192573bb14b64ffdc34b3548020a4a218
-RMD160 (pflogsumm-1.1.0.tar.gz) = ab4af22a3bb993ca3b8e3d1b58052f4e69ae890c
-SHA512 (pflogsumm-1.1.0.tar.gz) = 323cfce1195bc7a2410c3a846deaf1ba38d09acec72a9f6d333a6cb65c3b787c706c044fc4cfbc35150e071485483aac159719fdb4b536b186e2bf646c09f1ef
-Size (pflogsumm-1.1.0.tar.gz) = 43588 bytes
+SHA1 (pflogsumm-1.1.3.tar.gz) = 86bdb3b880896e9a4991dd3ea77c4981a5c65dcb
+RMD160 (pflogsumm-1.1.3.tar.gz) = be63bd79c3bde406fe9e7fcc5b241fd7b2283ddb
+SHA512 (pflogsumm-1.1.3.tar.gz) = c378bbc4ec3fe6be3bca52df579ca0c92a98a53e8b3017e8b308f3359ce1216a23c754cb9775c5aaf6578a77189aae89cc39df189a39f32ff8c8997ee542a7ce
+Size (pflogsumm-1.1.3.tar.gz) = 46380 bytes
