@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.554 2019/02/02 17:53:53 leot Exp $
+$NetBSD: CHANGES-2019,v 1.555 2019/02/02 18:09:42 scole Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -1098,3 +1098,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated ham/rtl-sdr to 0.6.0 [tnn 2019-02-02]
 	Updated databases/p5-App-Sqitch to 0.9999 [schmonz 2019-02-02]
 	Updated misc/moreutils to 0.63 [leot 2019-02-02]
+	Updated sysutils/pflogsumm to 1.1.3 [scole 2019-02-02]
